refactor(BE): #S08P31A306-334 refactor get feedback list add if is version up or not